kustomize/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realio-network-frontend
  namespace: realio-network-frontend
spec:
  selector:
    matchLabels:
      app: realio-network-frontend
  template:
    metadata:
      labels:
        app: realio-network-frontend
    spec:
      containers:
      - name: realio-network-frontend
        image: registry.digitalocean.com/kubernetes-prod/realio-network-frontend:latest
        resources:
          requests:
            memory: "3Gi"
            cpu: "300m"
          limits:
            memory: "3Gi"
            cpu: "500m"
  replicas: 2
