kustomize/overlays/prod/dns-records.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ingress-aliases
  namespace: realio-network-frontend
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: realio.network,www.realio.network
    external-dns.alpha.kubernetes.io/hostname: updated.realio.network
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  type: ExternalName
  externalName: ingress.realio.network
