kustomize/overlays/prod/httproute-www.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: realio-network-frontend-www
  namespace: realio-network-frontend
spec:
  parentRefs:
  - name: nginx
    namespace: nginx-gateway
    # sectionName: realio-network-frontend-www
    sectionName: realio-network-frontend-updated
  hostnames:
  # - "www.realio.network"
  - "updated.realio.network"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: realio-network-frontend
      port: 80
