kustomize/overlays/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: realio-network-frontend
  namespace: realio-network-frontend
spec:
  hostnames:
  - "realio.network"
